adds health endpoint
